--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.language=ts
 sonar.projectName=asw2223_0
 sonar.projectVersion=1.0.4
 
-sonar.coverage.inclusion=**/*.test.tsx,**/*.test.ts
+sonar.coverage.exclusion=**/*.test.tsx,**/*.test.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
