--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,4 @@ sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
+sonar.testExecutionReportPaths=test-report.xml
