--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,5 +10,5 @@ sonar.coverage.exclusion=**/*.test.tsx,**/*.test.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
-sonar.typescript.lcov.reportPaths=./coverage/lcov.info
-sonar.ts.lcov.reportPaths=./coverage/lcov.info
+sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
+sonar.ts.lcov.reportPaths=**/coverage/lcov.info
