--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -40,12 +40,13 @@ jobs:
       with:
         node-version: 18
     - run: npm ci
-    - run: npm run test --coverage --watchAll=false 
+    - run: npm test -coverage --watchAll
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - uses: codecov/codecov-action@v2
   e2e-tests:
     needs: [unit-test-webapp, unit-test-restapi]
     runs-on: ubuntu-latest
