--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,8 @@ sonar.language=ts
 sonar.projectName=asw2223_0
 sonar.projectVersion=1.0.4
 
-sonar.coverage.exclusion=**/*.test.tsx,**/*.test.ts
+sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
-sonar.ts.lcov.reportPaths=**/coverage/lcov.info
