--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,5 @@ sonar.sources=webapp/src,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
+sonar.typescript.json.reportPaths=**/coverage/coverage-final.json
 sonar.ts.lcov.reportPaths=**/coverage/lcov.info
