disabling  scm exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,4 @@ sonar.exclusions=node_modules/**
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
 sonar.typescript.json.reportPaths=**/coverage/coverage-final.json
 sonar.ts.lcov.reportPaths=**/coverage/lcov.info
+sonar.scm.exclusions.disabled=true
