setting sonar two modules

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,40 @@
-sonar.organization=cidinene
-sonar.host.url=https://sonarcloud.io
-sonar.projectKey=cidinene_asw2223_0
 
-sonar.language=ts
-sonar.projectName=asw2223_0
-sonar.projectVersion=1.0.4
-sonar.log.level=DEBUG
+# =====================================================
+#   Definition of the modules
+# =====================================================
 
-sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts,**/api/*,**/reportWebVitals.ts
-sonar.sources=webapp/src,restapi
-sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/**
-sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
-sonar.typescript.json.reportPaths=**/coverage/coverage-final.json
-sonar.ts.lcov.reportPaths=**/coverage/lcov.info
-sonar.scm.exclusions.disabled=true
+sonar.modules=webapp,restapi
+
+webapp.sonar.projectName=webapp
+restapi.sonar.projectName=restapi
+
+# =====================================================
+#   Frontend
+# =====================================================
+
+webapp.sonar.projectBaseDir=webapp
+
+webapp.sonar.sources=src
+webapp.sonar.exclusions=**/*test*
+
+webapp.sonar.tests=src
+webapp.sonar.test.inclusions=**/*test*
+    
+# =====================================================
+#   Backend
+# =====================================================
+
+restapi.sonar.projectBaseDir=restapi
+
+restapi.sonar.sources=.
+restapi.sonar.exclusions=**/test/*
+
+restapi.sonar.tests=./tests
+restapi.sonar.test.inclusions=**/tests/*
+
+# =====================================================
+#   Reports
+# =====================================================
+
+webapp.sonar.cobertura.reportsPath=**/coverage/lcov.info
+restapi.sonar.cobertura.reportsPath=**/coverage/coverage-final.json
