--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,8 @@
 
+sonar.projectKey=cidinene_asw2223_0
+sonar.projectName=cidinene_asw2223_0
+sonar.projectVersion=1.0.0
+
 # =====================================================
 #   Definition of the modules
 # =====================================================
