--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,14 @@
 
+sonar.host.url=https://sonarcloud.io
+sonar.projectKey=cidinene_asw2223_0
+
+
+sonar.organization=cidinene
 sonar.projectKey=cidinene_asw2223_0
 sonar.projectName=cidinene_asw2223_0
-sonar.projectVersion=1.0.0
-
+sonar.projectVersion=1.1.0
+sonar.log.level=DEBUG
+sonar.language=ts
 # =====================================================
 #   Definition of the modules
 # =====================================================
