prueba sonar modules + rest api in test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,6 +29,8 @@ webapp.sonar.exclusions=**/*test*
 
 webapp.sonar.tests=src
 webapp.sonar.test.inclusions=**/*test*
+
+
     
 # =====================================================
 #   Backend
@@ -37,14 +39,14 @@ webapp.sonar.test.inclusions=**/*test*
 restapi.sonar.projectBaseDir=restapi
 
 restapi.sonar.sources=.
-restapi.sonar.exclusions=**/test/*
+restapi.sonar.exclusions=**/*test*
 
-restapi.sonar.tests=./tests
-restapi.sonar.test.inclusions=**/tests/*
+restapi.sonar.tests=.
+restapi.sonar.test.inclusions=**/*test*
 
 # =====================================================
 #   Reports
 # =====================================================
 
-webapp.sonar.cobertura.reportsPath=**/coverage/lcov.info
-restapi.sonar.cobertura.reportsPath=**/coverage/coverage-final.json
+webapp.sonar.lcov.reportsPath=**/coverage/lcov.info
+restapi.sonar.lcov.reportsPath=**/coverage/lcov.info
