--- a/restapi/package.json
+++ b/restapi/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
+    "jest-sonar-reporter": "^2.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.4",
     "ts-node-dev": "^2.0.0",
