--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: 18
     - run: npm ci
-    - run: npm run test --coverage --watchAll=false
+    - run: npm run test --coverage --watchAll=false --coverageReporters=lcov
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
@@ -40,7 +40,7 @@ jobs:
       with:
         node-version: 18
     - run: npm ci
-    - run: npm run test -- --coverage --watchAll
+    - run: npm run test -- --coverage  --watchAll=false  --coverageReporters=lcov
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
