--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,6 @@ sonar.projectKey=cidinene_asw2223_0
 
 
 sonar.organization=cidinene
-sonar.projectKey=cidinene_asw2223_0
 sonar.projectName=cidinene_asw2223_0
 sonar.projectVersion=1.1.0
 sonar.log.level=DEBUG
@@ -24,10 +23,10 @@ restapi.sonar.projectName=restapi
 
 webapp.sonar.projectBaseDir=webapp
 
-webapp.sonar.sources=src
+webapp.sonar.sources=src/**
 webapp.sonar.exclusions=**/*test*
 
-webapp.sonar.tests=src
+webapp.sonar.tests=src/**
 webapp.sonar.test.inclusions=**/*test*
 
 
