setting restapi coverage format to default -lcov

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,10 +23,10 @@ restapi.sonar.projectName=restapi
 
 webapp.sonar.projectBaseDir=webapp
 
-webapp.sonar.sources=src/**
-webapp.sonar.exclusions=**/*test*
+webapp.sonar.sources=src
+webapp.sonar.exclusions=**/*test*,shared/,api/
 
-webapp.sonar.tests=src/**
+webapp.sonar.tests=src
 webapp.sonar.test.inclusions=**/*test*
 
 
