--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -22,30 +22,16 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: 18
-    - run: npm ci
-    - run: npm run test --coverage --watchAll=false --coverageReporters=lcov
+    - run: npm --prefix webapp ci
+    - run: npm --prefix restapi ci
+    - run: npm --prefix webapp run test --coverage --watchAll=false --coverageReporters=lcov
+    - run: npm --prefix restapi run test --coverage --watchAll=false --coverageReporters=lcov
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  unit-test-restapi:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: restapi
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 18
-    - run: npm ci
-    - run: npm run test -- --coverage  --watchAll=false  --coverageReporters=lcov
-    - name: Analyze with SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  
   e2e-tests:
     needs: [unit-test-webapp, unit-test-restapi]
     runs-on: ubuntu-latest
