--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -12,7 +12,7 @@ on:
       - develop
       - master
 jobs:
-  unit-test-webapp:
+  unit-test:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -33,7 +33,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   
   e2e-tests:
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
