--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -72,3 +72,20 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
+  deploy:
+    name: Deploy over SSH
+    runs-on: ubuntu-latest
+    needs: [docker-push-restapi,docker-push-webapp]
+    steps:
+    - name: Deploy over SSH
+      uses: fifsky/ssh-action@master
+      with:
+        host: ${{ secrets.AWS_DEPLOY_HOST }}
+        user: ${{ secrets.AWS_DEPLOY_USER }}
+        key: ${{ secrets.AWS_DEPLOY_KEY }}
+        command: |
+          wget https://raw.githubusercontent.com/pglez82/asw2223_0/master/docker-compose-deploy.yml -O docker-compose.yml
+          docker-compose stop
+          docker-compose rm -f
+          docker-compose pull   
+          docker-compose up -d
