--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -24,7 +24,7 @@ jobs:
     - run: npm --prefix webapp run test --coverage --watchAll=false --coverageReporters=lcov
     - run: npm --prefix restapi run test --coverage --watchAll=false --coverageReporters=lcov
     - name: Analyze with SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
+      uses: sonarsource/sonarcloud-github-action@@v1.8
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
