--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -73,19 +73,18 @@ jobs:
           registry: ghcr.io
           workdir: restapi
   deploy:
-    name: Deploy over SSH
+    name: gh-pages deploy
     runs-on: ubuntu-latest
-    needs: [docker-push-restapi,docker-push-webapp]
     steps:
-    - name: Deploy over SSH
-      uses: fifsky/ssh-action@master
+    - uses: actions/checkout@v
+    - uses: actions/setup-node@v2
       with:
-        host: ${{ secrets.AWS_DEPLOY_HOST }}
-        user: ${{ secrets.AWS_DEPLOY_USER }}
-        key: ${{ secrets.AWS_DEPLOY_KEY }}
-        command: |
-          wget https://raw.githubusercontent.com/pglez82/asw2223_0/master/docker-compose-deploy.yml -O docker-compose.yml
-          docker-compose stop
-          docker-compose rm -f
-          docker-compose pull   
-          docker-compose up -d
+        node-version: 18
+    - run: npm --prefix webapp install
+    - run: npm --prefix webapp run prod
+    - uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./webapp/build
+    
+   
