--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -72,11 +72,12 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
+          
   deploy:
     name: gh-pages deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
         node-version: 18
