--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -71,8 +71,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
-          workdir: restapi
-          
+          workdir: restapi        
   deploy:
     name: gh-pages deploy
     runs-on: ubuntu-latest
@@ -86,6 +85,8 @@ jobs:
     - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        external_repository: cidinene/equipoInterfaz5
+        publish_branch: gh-pages # default: gh-pages
         publish_dir: ./webapp/build
     
    
