--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -28,7 +28,6 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  
   e2e-tests:
     needs: [unit-test]
     runs-on: ubuntu-latest
@@ -40,38 +39,7 @@ jobs:
     - run: npm --prefix webapp install
     - run: npm --prefix restapi install
     - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
-  docker-push-webapp:
-    name: Push webapp Docker Image to GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [e2e-tests]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      env:
-        API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
-      with:
-          name: cidinene/asw2223_0/webapp
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: webapp
-          buildargs: API_URI
-  docker-push-restapi:
-    name: Push restapi Docker Image to GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [e2e-tests]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
-          name: cidinene/asw2223_0/restapi
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: restapi        
+    - run: npm --prefix webapp run test:e2e    
   deploy:
     name: gh-pages deploy
     runs-on: ubuntu-latest
@@ -84,7 +52,7 @@ jobs:
     - run: npm --prefix webapp run build
     - uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        personal_token: ${{ secrets.ASW_DEPLOY }}
         external_repository: cidinene/equipoInterfaz5
         publish_branch: gh-pages # default: gh-pages
         publish_dir: ./webapp/build
