--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -57,6 +57,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         personal_token: ${{ secrets.AWS_DEPLOY }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         external_repository: cidinene/equipoInterfaz5.github.io
         publish_branch: master # default: gh-pages
         publish_dir: ./webapp/build
