--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -53,15 +53,10 @@ jobs:
     - run: npm --prefix webapp run build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        personal_token: ${{ secrets.AWS_DEPLOY }}
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        external_repository: cidinene/equipoInterfaz5.github.io
-        publish_branch: master # default: gh-pages
-        publish_dir: ./webapp/build
-        user_name: cidinene
-        user_email: cidirene@gmail.com
+        publish_dir: ./public
+        force_orphan: true
+
     
    
