--- a/.github/workflows/asw2223.yml
+++ b/.github/workflows/asw2223.yml
@@ -52,13 +52,20 @@ jobs:
     - run: npm --prefix webapp install
     - run: npm --prefix webapp run build
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+      id: push_directory
+      uses: cpina/github-action-push-to-another-repository@create-branch-if-needed-arg
+      env:
+          API_TOKEN_GITHUB: ${{ secrets.GH_DEPLUY }}
       with:
-        personal_token: ${{ secrets.GH_DEPLUY  }}
-        external_repository: cidinene/equipoInterfaz5.github.io
-        publish_branch: master # default: gh-pages
-        publish_dir: ./webapp/build
-        user_name: cidinene
-        user_email: cidirene@gmail.com
+          source-directory: webmail/build
+          destination-github-username: 'cidinene'
+          destination-repository-name: 'cidinene/equipoInterfaz5.github.io'
+          user-email: cidirene@gmail.com
+          commit-message: See ORIGIN_COMMIT from $GITHUB_REF
+          target-branch: main-does-not-exist
+          create-target-branch-if-needed: true
+      - name: Test get variable exported by push-to-another-repository
+        run: echo $DESTINATION_CLONED_DIRECTORY
+        
     
    
